--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <li class="specs">70% of performance increase </li>          
           </ul>
           <ul class="specs-img">
-            <li><img class="spec-img" src="/img/cpu.svg" alt="cpu"></li>
-            <li><img class="spec-img" src="/img/speed.svg" alt="speed"></li>
-            <li><img class="spec-img" src="/img/gym.svg" alt="power"></li>
+            <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
+            <li><img class="spec-img" src="img/speed.svg" alt="speed"></li>
+            <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
         <p ><a class="learn-link" href="#">learn more ></a></p>
@@ -84,9 +84,9 @@
             <li class="specs">80% of performance increase </li>          
           </ul>
           <ul class="specs-img">
-            <li><img class="spec-img" src="/img/cpu.svg" alt="cpu"></li>
-            <li><img class="spec-img" src="/img/speed.svg" alt="speed"></li>
-            <li><img class="spec-img" src="/img/gym.svg" alt="power"></li>
+            <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
+            <li><img class="spec-img" src="img/speed.svg" alt="speed"></li>
+            <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
         <p ><a class="learn-link" href="#">learn more ></a></p>
@@ -110,9 +110,9 @@
             <li class="specs">90% of performance increase </li>          
           </ul>
           <ul class="specs-img">
-            <li><img class="spec-img" src="/img/cpu.svg" alt="cpu"></li>
-            <li><img class="spec-img" src="/img/speed.svg" alt="speed"></li>
-            <li><img class="spec-img" src="/img/gym.svg" alt="power"></li>
+            <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
+            <li><img class="spec-img" src="img/speed.svg" alt="speed"></li>
+            <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
         <p ><a class="learn-link" href="#">learn more ></a></p>
@@ -146,9 +146,9 @@
         </ul>
         <ul class="social">
           <li class="m-li-h">follow us</li>
-          <li><a class="m-li" href="#"><img src="/img/instagram-sketched.svg" alt="ing" width="10%"></a></li>
-          <li><a class="m-li" href="#"><img src="/img/twitter-social-badge.svg" alt="twitter" width="10%"></a></li>
-          <li><a class="m-li" href="#"><img src="/img/facebook.svg" width="10%" alt="fb"></a></li>
+          <li><a class="m-li" href="#"><img src="img/instagram-sketched.svg" alt="ing" width="10%"></a></li>
+          <li><a class="m-li" href="#"><img src="img/twitter-social-badge.svg" alt="twitter" width="10%"></a></li>
+          <li><a class="m-li" href="#"><img src="img/facebook.svg" width="10%" alt="fb"></a></li>
         </ul>
 
       </ul>
