added more styling

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li class="specs">85% of performance increase </li>          
           </ul>
           <ul class="specs-img">
-            <li><img class="spec-img" src="/img/cpu.svg" alt="cpu"></li>
-            <li><img class="spec-img" src="/img/speed.svg" alt="speed"></li>
-            <li><img class="spec-img" src="/img/gym.svg" alt="power"></li>
+            <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
+            <li><img class="spec-img" src="img/speed.svg" alt="speed"></li>
+            <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
         <p ><a class="learn-link" href="#">learn more ></a></p>
