--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <title>Gaming Laptops</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
-
+<body class="body">
 
   <main>
-
+  
     <nav>
       <div class="top-nav">
        <ul class="top-list">
@@ -157,4 +156,5 @@
     <script src="js/app.js"></script>
   </main>
 </body>
+
 </html>
