--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gaming Laptops</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body class="body">
 
   <main>
-  
+
     <nav>
       <div class="top-nav">
-       <ul class="top-list">
-      <li><h1>gaming laptops</h1></li>
-      <li> <a class="top-links" href="#"> products</a></li>
-      <li> <a class="top-links" href="#"> software</a></li>
-      <li><a  class="top-links"href="#"> community</a></li>
-      <li><a class="top-links" href="#"> store</a></li>
-      <li><a class="top-links" href="#">support</a></li>
-      </ul>
+        <ul class="top-list">
+          <li>
+            <h1>gaming laptops</h1>
+          </li>
+          <li> <a class="top-links" href="#"> products</a></li>
+          <li> <a class="top-links" href="#"> software</a></li>
+          <li><a class="top-links" href="#"> community</a></li>
+          <li><a class="top-links" href="#"> store</a></li>
+          <li><a class="top-links" href="#">support</a></li>
+        </ul>
       </div>
     </nav>
 
-  <section class="products">
-        <div class="msi-prd">
-          <div class="description">
-            <h2>MSI</h2>
+    <section class="products">
+      <div class="msi-prd">
+        <div class="description">
+          <h2>MSI</h2>
           <p> gt76 titan dt (intel 9th gen)</p>
-          <p>The new GT76 Titan DT is the most extreme Titan we've ever created. The premium built, exotic car-inspired design is reflected throughout the exterior. Aerodynamic lines run through the aluminum top cover as it's finished with a carbon fiber themed body. You'll notice the same aggressive exhausts you can find the world's greatest supercars today. This is the new Titan. This is the new desktop killer.</p>
-          <p>You read that right. A true, full desktop CPU socket is at the center of the GT76. Unleash the beast, overclocked to 5.0 GHz across all 8 cores and break any records held previously on a laptop system. Pair that up with our Cooler Boost Titan and you’ve got yourself a stable system that keeps on going. You wanted power? You wanted performance? The GT76 is it</p>
-          <p>Extreme performance calls for extreme cooling capability. The new Cooler Boost Titan is redesigned to handle even the most extreme heat, granting the new GT Titan its overclocked desktop performance.</p>
+          <p>The new GT76 Titan DT is the most extreme Titan we've ever created. The premium built, exotic car-inspired
+            design is reflected throughout the exterior. Aerodynamic lines run through the aluminum top cover as it's
+            finished with a carbon fiber themed body. You'll notice the same aggressive exhausts you can find the
+            world's greatest supercars today. This is the new Titan. This is the new desktop killer.</p>
+          <p>You read that right. A true, full desktop CPU socket is at the center of the GT76. Unleash the beast,
+            overclocked to 5.0 GHz across all 8 cores and break any records held previously on a laptop system. Pair
+            that up with our Cooler Boost Titan and you’ve got yourself a stable system that keeps on going. You wanted
+            power? You wanted performance? The GT76 is it</p>
+          <p>Extreme performance calls for extreme cooling capability. The new Cooler Boost Titan is redesigned to
+            handle even the most extreme heat, granting the new GT Titan its overclocked desktop performance.</p>
           <ul class="spec-list">
             <li class="specs">8 core processor </li>
-            <li class="specs">5.0 GHz overclock </li>      
-            <li class="specs">85% of performance increase </li>          
+            <li class="specs">5.0 GHz overclock </li>
+            <li class="specs">85% of performance increase </li>
           </ul>
           <ul class="specs-img">
             <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
@@ -42,22 +53,27 @@
             <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
-        <p ><a class="learn-link" href="#">learn more ></a></p>
-        </div>
+        <p><a class="learn-link" href="#">learn more ></a></p>
+      </div>
 
-        <div class="razer-prd">
-          <div class="description">
-            <h2>RAZER BLADE</h2>
+      <div class="razer-prd">
+        <div class="description">
+          <h2>RAZER BLADE</h2>
           <p>RAZER BLADE STEALTH 13</p>
           <p>
             The World’s First Gaming Ultrabook
-            The Razer Blade Stealth Ultrabook is equipped with GeForce® GTX 1650 graphics for a true gaming experience and content creation all in an ultrathin ultrabook. Featuring the 10th Gen Intel® Core™ i7 Processor, with a visually stunning display, and Razer Chroma™ keyboard, it's perfect for work and play.
-            The new Razer Blade 15 is now available with the world’s first optical laptop keyboard for greater precision, speed, and a satisfying tactile click. All models have options for the latest 6-Core Intel® Core™ processors and NVIDIA® GeForce RTX™ graphics. Killer performance with a look to match—the Razer Blade 15 now comes in Quartz Pink, Mercury White, or Classic Black.
+            The Razer Blade Stealth Ultrabook is equipped with GeForce® GTX 1650 graphics for a true gaming experience
+            and content creation all in an ultrathin ultrabook. Featuring the 10th Gen Intel® Core™ i7 Processor, with a
+            visually stunning display, and Razer Chroma™ keyboard, it's perfect for work and play.
+            The new Razer Blade 15 is now available with the world’s first optical laptop keyboard for greater
+            precision, speed, and a satisfying tactile click. All models have options for the latest 6-Core Intel® Core™
+            processors and NVIDIA® GeForce RTX™ graphics. Killer performance with a look to match—the Razer Blade 15 now
+            comes in Quartz Pink, Mercury White, or Classic Black.
           </p>
           <ul class="spec-list">
             <li class="specs">6 core processor </li>
-            <li class="specs">3.0 GHz overclock </li>      
-            <li class="specs">70% of performance increase </li>          
+            <li class="specs">3.0 GHz overclock </li>
+            <li class="specs">70% of performance increase </li>
           </ul>
           <ul class="specs-img">
             <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
@@ -65,22 +81,30 @@
             <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
-        <p ><a class="learn-link" href="#">learn more ></a></p>
-        </div>
+        <p><a class="learn-link" href="#">learn more ></a></p>
+      </div>
 
-        <div class="asus-prd">
-          <div class="description">
-            <h2>ASUS ROG</h2>
-          <p>ROG Strix  Scar 3</p>
+      <div class="asus-prd">
+        <div class="description">
+          <h2>ASUS ROG</h2>
+          <p>ROG Strix Scar 3</p>
           <p>
-            Aim for esports excellence with the ROG Strix SCAR III, engineered to compete at the top tier of Windows 10 Pro gaming. Intelligent Cooling unleashes the raw power of the 9th Gen Intel Core CPU and GeForce RTX™ graphics, while the world’s fastest 240Hz/3ms laptop display lets you play at the speed of pro gaming. Jump into multiplayer matches anywhere with stronger RangeBoost Wi-Fi, show off your personality with the wraparound Aura Sync light bar, and gain privacy for personal data with the new ROG Keystone.
-            Efficiency and innovation unite in the sleek, gunmetal grey ROG Strix SCAR III. Its strategic design is inspired by our collaboration with BMW Designworks Group, and carves out a cooling advantage with its 3D Flow Zone. The subtle, carbon-patterned interior is accented by Aura Sync lighting that extends across the new wraparound light bar, keyboard, and ROG logo. Whether you’re gearing up for competition or hopping into quickplay, this metal-capped machine is fine-tuned and ready for action.
+            Aim for esports excellence with the ROG Strix SCAR III, engineered to compete at the top tier of Windows 10
+            Pro gaming. Intelligent Cooling unleashes the raw power of the 9th Gen Intel Core CPU and GeForce RTX™
+            graphics, while the world’s fastest 240Hz/3ms laptop display lets you play at the speed of pro gaming. Jump
+            into multiplayer matches anywhere with stronger RangeBoost Wi-Fi, show off your personality with the
+            wraparound Aura Sync light bar, and gain privacy for personal data with the new ROG Keystone.
+            Efficiency and innovation unite in the sleek, gunmetal grey ROG Strix SCAR III. Its strategic design is
+            inspired by our collaboration with BMW Designworks Group, and carves out a cooling advantage with its 3D
+            Flow Zone. The subtle, carbon-patterned interior is accented by Aura Sync lighting that extends across the
+            new wraparound light bar, keyboard, and ROG logo. Whether you’re gearing up for competition or hopping into
+            quickplay, this metal-capped machine is fine-tuned and ready for action.
 
           </p>
           <ul class="spec-list">
             <li class="specs">8 core processor </li>
-            <li class="specs">3.2 GHz overclock </li>      
-            <li class="specs">80% of performance increase </li>          
+            <li class="specs">3.2 GHz overclock </li>
+            <li class="specs">80% of performance increase </li>
           </ul>
           <ul class="specs-img">
             <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
@@ -88,25 +112,33 @@
             <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
-        <p ><a class="learn-link" href="#">learn more ></a></p>
-        </div>
+        <p><a class="learn-link" href="#">learn more ></a></p>
+      </div>
 
-        <div class="dell-prd">
-          <div class="description">
-            <h2>DELL ALIENWARE</h2>
+      <div class="dell-prd">
+        <div class="description">
+          <h2>DELL ALIENWARE</h2>
           <p>Alienware area 51</p>
           <p>
-            Revolutionary 17-inch gaming laptop with upgradeable, overclockable desktop 9th Gen Intel® Core™ processors and NVIDIA® GeForce RTX™ graphics, plus a magnesium alloy chassis.The Area-51m features a host of firsts for peak performance and power. It’s our first-ever Alienware laptop to feature up to 8-core, 16-thread Intel® processors, giving it a whole new level of compute power versus other gaming laptops. Engineered with desktop processors, the CPU is enabled with up to 125% rated power, allowing high-end overclocking. This results in higher performance for megatasking, CPU-intensive gaming, as well as day-to-day applications.
+            Revolutionary 17-inch gaming laptop with upgradeable, overclockable desktop 9th Gen Intel® Core™ processors
+            and NVIDIA® GeForce RTX™ graphics, plus a magnesium alloy chassis.The Area-51m features a host of firsts for
+            peak performance and power. It’s our first-ever Alienware laptop to feature up to 8-core, 16-thread Intel®
+            processors, giving it a whole new level of compute power versus other gaming laptops. Engineered with
+            desktop processors, the CPU is enabled with up to 125% rated power, allowing high-end overclocking. This
+            results in higher performance for megatasking, CPU-intensive gaming, as well as day-to-day applications.
 
-            Lose yourself in vivid, uninterrupted gaming thanks to NVIDIA® GeForce RTX™ graphics with full-throttle power and up to 30W of overclocking headroom—all on an optional immersive 144Hz G-SYNC 17" Full HD display. Users can overclock their settings via the new Alienware Command Center.
-            
-            The Area-51m is also our first-ever Alienware laptop to support up to 64GB of DDR4 memory, ensuring you have enough RAM for even the most performance-intensive tasks.
+            Lose yourself in vivid, uninterrupted gaming thanks to NVIDIA® GeForce RTX™ graphics with full-throttle
+            power and up to 30W of overclocking headroom—all on an optional immersive 144Hz G-SYNC 17" Full HD display.
+            Users can overclock their settings via the new Alienware Command Center.
+
+            The Area-51m is also our first-ever Alienware laptop to support up to 64GB of DDR4 memory, ensuring you have
+            enough RAM for even the most performance-intensive tasks.
 
           </p>
           <ul class="spec-list">
             <li class="specs">8 core processor </li>
-            <li class="specs">4.7 GHz overclock </li>      
-            <li class="specs">90% of performance increase </li>          
+            <li class="specs">4.7 GHz overclock </li>
+            <li class="specs">90% of performance increase </li>
           </ul>
           <ul class="specs-img">
             <li><img class="spec-img" src="img/cpu.svg" alt="cpu"></li>
@@ -114,20 +146,20 @@
             <li><img class="spec-img" src="img/gym.svg" alt="power"></li>
           </ul>
         </div>
-        <p ><a class="learn-link" href="#">learn more ></a></p>
-        </div>
-
-        
+        <p><a class="learn-link" href="#">learn more ></a></p>
+      </div>
 
 
 
-  </section>
 
-      <footer>
-        <ul class="parent-footer">
+
+    </section>
+
+    <footer>
+      <ul class="parent-footer">
         <ul class="shop">
-      <li class="shop-li-h">Shop</li>
-          <li>  <a class="shop-li"  href="#">Gaming laptops website</a></li>
+          <li class="shop-li-h">Shop</li>
+          <li> <a class="shop-li" href="#">Gaming laptops website</a></li>
           <li class="shop-li">My account</li>
           <li class="shop-li">Products</li>
         </ul>
@@ -152,7 +184,7 @@
 
       </ul>
       <p class="copyright"> &copy; 2020 all rights are reserved</p>
-      </footer>
+    </footer>
     <script src="js/app.js"></script>
   </main>
 </body>
